<resources>
    <string name="app_name">Silent Moon</string>
    <string name="silent">Silent</string>
    <string name="moon">Moon</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign up</string>
    <string name="phrase">We are what we do</string>
    <string name="phrase_two">Thousand of people are usign silent moon for smalls meditation </string>
    <string name="have_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="log_in">LOG IN</string>
    <string name="welcome">Welcome Back!</string>
    <string name="facebook">CONTINUE WITH FACEBOOK</string>
    <string name="google">CONTINUE WITH GOOGLE</string>
    <string name="or_email">OR LOG IN WITH EMAIL</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="create">Create your account </string>
    <string name="or_email_up">OR SIGN UP WITH EMAIL</string>
    <string name="login">Login</string>
    <string name="privace_policy_start">I HAVE READ THE</string>
    <string name="privace_policy_end">PRIVACE POLICY</string>
    <string name="get_started">GET STARTED</string>
    <string name="hello">Hi Afsar, Welcome to Silent Moon</string>
    <string name="text">Explore the app, Find some peace of mind to prepare for meditation.</string>
    <string name="like">What time would you like to meditate?</string>
    <string name="choose">Any time you can choose but We recommend first thing in the morning.</string>
    <string name="date_meditate">Which day would you like to meditate?</string>
    <string name="every_day_meditate">Everyday is best, but we recommend picking at least five.</string>
    <string name="sunday">SU</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">TH</string>
    <string name="saturday">S</string>
    <string name="friday">F</string>
    <string name="save">SAVE</string>
    <string name="brings">What Brings you</string>
    <string name="to_silent_moon">to Silent Moon?</string>
    <string name="choose_topic">choose a topic to focuse on:</string>
    <string name="Thank">NO THANKS</string>
    <string name="good_morning">Good Morning, Afsar</string>
    <string name="wish">We Wish you have a good day</string>
    <string name="basics">Basics</string>
    <string name="course">COURSE</string>
    <string name="time">3–10 MIN</string>
    <string name="music">MUSIC</string>
    <string name="relaxation">Relaxation</string>
    <string name="daily">Daily Thought</string>
    <string name="meditation">MEDITATION</string>
    <string name="recomended">Recomended for you</string>
    <string name="start">START</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_meditate">Meditate</string>
    <string name="title_music">Music</string>
    <string name="title_name">Name</string>
    <string name="meditate">Meditate</string>
    <string name="phrase_meditate">we can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>
    <string name="all_word">All</string>
    <string name="my_word">My</string>
    <string name="anxious">Anxious</string>
    <string name="sleep">Sleep</string>
    <string name="kids">Kids</string>
    <string name="focus">Focus</string>
    <string name="happiness">Happiness</string>
    <string name="daily_calm">Daily Calm</string>
    <string name="apr_word">APR 30</string>
    <string name="pause_practice">PAUSE PRACTICE</string>
    <string name="days_calm">7 Days of Calm</string>
    <string name="anxiet_release">Anxiet Release</string>
    <string name="focus_attention">Focus Attention</string>
    <string name="welcome_sleep">Welcome to Sleep</string>
    <string name="sleep_phrase">Explore the new king of sleep. It uses sound and visualization to create perfect conditions for refreshing sleep.</string>
    <string name="sleep_stories">Sleep Stories</string>
    <string name="sleep_stories_phrase">Soothing bedtime stories to help you fall into a deep and natural sleep</string>
    <string name="non_stop">Non-stop 8- hour mixes of our most popular sleep audio</string>
    <string name="ocean_moon">The Ocean Moon</string>
    <string name="point">•</string>
    <string name="night_island">Night Island</string>
    <string name="sweet_sleep">Sweet Sleep</string>
    <string name="good_night">Good Night</string>
    <string name="moon_clouds">Moon Clouds</string>
    <string name="sleep_music">45 MIN • SLEEP MUSIC</string>
    <string name="time_start">01:30</string>
    <string name="time_end">45:00</string>
    <string name="sleep_music_text">SLEEP MUSIC</string>
    <string name="sleep_music_title">Sleep Music</string>
    <string name="reduce_stress">Reduce Stress</string>
    <string name="reduce_anxiety">Reduce Anxiety</string>
    <string name="personal_growth">Personal Growth</string>
    <string name="better_sleep">Better Sleep</string>
    <string name="improve_performance">Improve Performance</string>
    <string name="increase_happiness">Increase Happiness</string>
    <string name="male">MALE VOICE</string>
    <string name="female">FEMALE VOICE</string>
    <string name="happy_morning">Happy Morning</string>
    <string name="course_phrase">Ease the mind into a restful night’s sleep  with these deep, amblent tones.</string>
    <string name="favourites">24.234 Favorites</string>
    <string name="listening">34.234 Listening</string>
    <string name="Nnrrator">Pick a Nnrrator</string>
    <string name="play_option_phrase">Ease the mind into a restful night’s sleep  with these deep, amblent tones.</string>
    <string name="play">play</string>
    <string name="focus_attenton">Focus Attention</string>
    <string name="bode_scan">Body Scan</string>
    <string name="making_happines">Making Happiness </string>
    <string name="time_ten">10 MIN</string>
    <string name="time_five">5 MIN</string>
    <string name="time_three">3 MIN</string>
    <string name="related">Related</string>
</resources>