<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sleep"
        android:icon="@drawable/ic_sleep"
        android:title="@string/title_sleep" />

    <item
        android:id="@+id/navigation_meditate"
        android:icon="@drawable/ic_meditate"
        android:title="@string/title_meditate" />
    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music"
        android:title="@string/title_music" />
    <item
        android:id="@+id/navigation_name"
        android:icon="@drawable/ic_name"
        android:title="@string/title_name" />

</menu>