<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageViewPlayMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_play_violet" />

    <TextView
        android:id="@+id/textViewFocusAttention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"
        android:text="@string/focus_attention"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayMusic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTime10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/time_ten"
        android:textColor="@color/grey_200"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayMusic"
        app:layout_constraintTop_toBottomOf="@+id/textViewFocusAttention" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/bode_scan"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayMusic2"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlayMusic2" />

    <TextView
        android:id="@+id/textViewTime5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/time_five"
        android:textColor="@color/grey_200"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayMusic2"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <ImageView
        android:id="@+id/imageViewPlayMusic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlayMusic"
        app:srcCompat="@drawable/ic_play_music_white" />

    <ImageView
        android:id="@+id/imageViewPlayMusic3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlayMusic2"
        app:srcCompat="@drawable/ic_play_music_white" />

    <TextView
        android:id="@+id/textViewMakingHapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/making_happines"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayMusic3"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlayMusic3" />

    <TextView
        android:id="@+id/textViewTime3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/time_three"
        android:textColor="@color/grey_200"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayMusic3"
        app:layout_constraintTop_toBottomOf="@+id/textViewMakingHapp" />
</androidx.constraintlayout.widget.ConstraintLayout>