<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_violet"
    tools:context=".welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewBackgroundWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_welcome_background_violet" />

        <TextView
            android:id="@+id/textViewSilentWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="10dp"
            android:letterSpacing="0.2"
            android:text="@string/silent"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/imageViewLogoWelcome"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewLogoWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toStartOf="@+id/textViewMoonWelcome"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewSilentWelcome"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_welcome" />

        <TextView
            android:id="@+id/textViewMoonWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="53dp"
            android:letterSpacing="0.2"
            android:text="@string/moon"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewLogoWelcome"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewHi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="50dp"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textColor="@color/beige"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogoWelcome" />

        <ImageView
            android:id="@+id/imageViewCube"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackgroundWelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_cube" />

        <TextView
            android:id="@+id/textViewExplore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="21dp"
            android:text="@string/text"
            android:textAlignment="center"
            android:textColor="@color/white_100"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHi" />

        <Button
            android:id="@+id/buttonGetStarted"
            style="@style/Button.Ghoast"
            android:layout_marginStart="@dimen/margin_start_button"
            android:layout_marginEnd="@dimen/margin_end_button"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/white_100"
            android:text="@string/get_started"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageViewGirlMeditation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonGetStarted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewExplore"
            app:srcCompat="@drawable/ic_meditation_girl" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>